<resources>
    <string name="app_name">Web Services</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="validate">Validate</string>
    <string name="cin">Cin</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="add_user">Add User</string>
    <string name="e_mail">E-Mail</string>
    <string name="first_name">First_name</string>
    <string name="last_name">Last_name</string>
    <string name="update_user">Update User</string>
    <string name="phone_number">Phone number</string>
    <string name="delete_user">Delete user</string>
    <string name="all_users">All users</string>
    <string name="display_user">Display user</string>
    <string name="userId">User ID</string>
</resources>
