<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        tools:context=".Fragments.addUser">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:textSize="40sp"
            android:layout_marginBottom="10dp"/>


        <EditText
            android:id="@+id/add_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/add_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textSize="20sp"
            android:inputType="text"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/add_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textSize="20sp"
            android:inputType="text"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/add_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textSize="20sp"
            android:inputType="phone"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/add_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/add_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:textSize="20sp"
            android:inputType="text"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_validate_addUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/validate"
            android:textSize="20sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
</ScrollView>